<?xml version="1.0"?>
<package format="2">
  <name>diagnostic_updater_ext</name>
  <version>0.0.1</version>
  <description>diagnostic_updater contains tools for easily updating diagnostics. it is commonly used in device drivers to keep track of the status of output topics, device status, etc.</description>
  <author>WHILL</author>
  <maintainer email="yuma.hiramatsu@whill.inc">Yuma Hiramatsu</maintainer>

  <license>BSD</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
